# libtropicana

./: .gitignore  CMakeLists.txt  README.md  basic.hh  cell.cc  cell.hh  core.hh  debug.cc  debug.hh  inverse.hh  key.hh  lookup.hh  main.cc  python.cc  state.cc  state.hh  state_array.hh  table.hh  trop.cc  trop.hh
tests/: cube.cc  hypercube.cc  main.cc  pivot_perf.cc  pywrapper.py  square.cc  trapezoid.cc
